<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_gravity="fill"
    android:background="@drawable/bottom_sheet_background">



    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="20dp"
        android:src="@drawable/rectangle_286"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edt_departure_form_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/top_corners"
            android:backgroundTint="@color/grey4"
            android:drawableLeft="@drawable/ic_plane"
            android:drawablePadding="10dp"
            android:hint="Откуда - Москва"
            android:inputType="text"
            android:padding="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/grey6" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"

            android:background="@color/grey5"
            android:paddingHorizontal="40dp" />

        <EditText
            android:id="@+id/edit_arrival_from_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_corners"
            android:backgroundTint="@color/grey4"
            android:drawableLeft="@drawable/ic_search"
            android:drawableRight="@drawable/ic_cancel"
            android:drawablePadding="12dp"
            android:hint="Куда - Турция"
            android:inputType="text"
            android:padding="8dp"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/grey6" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fast_corners"
                android:outlineProvider="background"
                app:srcCompat="@drawable/fast1" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fast1_string"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="32dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fast_corners"
                android:outlineProvider="background"
                app:srcCompat="@drawable/fast2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fast2_string"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="32dp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fast_corners"
                android:outlineProvider="background"
                app:srcCompat="@drawable/fast3" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fast3_string"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="40dp">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToOutline="true"
                android:outlineProvider="background"
                app:srcCompat="@drawable/fast4" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fast4_string"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/image_corners"
        android:paddingStart="16dp"
        app:cardBackgroundColor="@color/grey3"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear_stambul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/fast_corners"
                    android:clipToOutline="true"
                    android:outlineProvider="background"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/stambul"

                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_medium"
                        android:paddingLeft="8dp"
                        android:text="@string/stambul"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_semibold"
                        android:paddingLeft="8dp"
                        android:text="@string/most_popular_tickets"
                        android:textColor="@color/grey5"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="9dp"
                android:layout_marginRight="8dp"
                android:background="@color/grey5" />

            <LinearLayout
                android:id="@+id/linear_sochi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/fast_corners"
                    android:clipToOutline="true"
                    android:outlineProvider="background"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/sochi"

                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_medium"
                        android:paddingLeft="8dp"
                        android:text="@string/sochi"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_semibold"
                        android:paddingLeft="8dp"
                        android:text="@string/most_popular_tickets"
                        android:textColor="@color/grey5"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/grey5" />

            <LinearLayout
                android:id="@+id/linear_phuket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/fast_corners"
                    android:clipToOutline="true"
                    android:outlineProvider="background"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/phuket"

                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_medium"
                        android:paddingLeft="8dp"
                        android:text="@string/phuket"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView23"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_semibold"
                        android:paddingLeft="8dp"
                        android:text="@string/most_popular_tickets"
                        android:textColor="@color/grey5"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="16dp"
                android:background="@color/grey5" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>